<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.fairplay.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/fairpic" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                style="@style/TextViewStyle"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/team_a"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/team_a_score"
                style="@style/TextViewStyle"
                android:fontFamily="sans-serif-light"
                android:text="0"
                android:textSize="56sp" />

            <Button
                style="@style/ButtonStyle"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="24dp"
                android:background="#2196F3"
                android:onClick="addOneForTeamA"
                android:text="@string/foulA" />

            <Button
                style="@style/ButtonStyle"
                android:layout_marginBottom="8dp"
                android:background="#FFFF00"
                android:onClick="addTwoForTeamA"
                android:text="@string/yellowA" />

            <Button
                style="@style/ButtonStyle"
                android:background="#F44336"
                android:onClick="addThreeForTeamA"
                android:text="@string/redA" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray"
            android:padding="1dp">

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                style="@style/TextViewStyle"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/team_b"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/team_b_score"
                style="@style/TextViewStyle"
                android:fontFamily="sans-serif-light"
                android:text="0"
                android:textSize="56sp" />

            <Button
                style="@style/ButtonStyle"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="24dp"
                android:background="#2196F3"
                android:onClick="addOneForTeamB"
                android:text="@string/foulB" />

            <Button
                style="@style/ButtonStyle"
                android:layout_marginBottom="8dp"
                android:background="#FFFF00"
                android:onClick="addTwoForTeamB"
                android:text="@string/yellowB" />

            <Button
                style="@style/ButtonStyle"
                android:background="#F44336"
                android:onClick="addThreeForTeamB"
                android:text="@string/redB" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        style="@style/TextViewStyle"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="48dp"
        android:fontFamily="sans-serif-medium"
        android:text="Fairplay?"
        android:textSize="35sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="Reset"
        android:text="Reset" />

</RelativeLayout>